--- a/index.html
+++ b/index.html
@@ -6,26 +6,26 @@
   <link rel="stylesheet" href="styles/app.css">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>График продаж литературы</title>
+  <title>Book sales schedule</title>
 
 </head>
 
 <body>
   <section class="container">
-    <h1>Продажа литературы</h1>
+    <h1>Book sales</h1>
     <table class="histogram">
       <!-- BEGIN -->
       <thead class="histogram-header">
         <tr>
-          <th>Жанры:</th>
-          <th class="px-20 histogram-header-blue">Классическая</th>
-          <th class="px-20 histogram-header-red">Фантастика</th>
-          <th class="px-20 histogram-header-green">Романы</th>
+          <th>Genres:</th>
+          <th class="px-20 histogram-header-blue">Classic</th>
+          <th class="px-20 histogram-header-red">Fantasy</th>
+          <th class="px-20 histogram-header-green">Novels</th>
         </tr>
       </thead>
       <tbody class="histogram-body mt-50px">
         <tr class="histogram-row">
-          <td class="histogram-name">2018 год</td>
+          <td class="histogram-name">2018 year</td>
           <td class="histogram-col">
             <span data-value="40" class="w-50px histogram-blue"></span>
             <p>40k</p>
@@ -40,7 +40,7 @@
           </td>
         </tr>
         <tr class="histogram-row">
-          <td class="histogram-name">2019 год</td>
+          <td class="histogram-name">2019 year</td>
           <td class="histogram-col">
             <span data-value="35" class="w-50px histogram-blue"></span>
             <p>35k</p>
@@ -55,7 +55,7 @@
           </td>
         </tr>
         <tr class="histogram-row">
-          <td class="histogram-name">2020 год</td>
+          <td class="histogram-name">2020 year</td>
           <td class="histogram-col">
             <span data-value="90" class="w-50px histogram-blue"></span>
             <p>90k</p>
